# sentiment-dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: Main.py
app/pages/: content_analysis.py  main_page.py
src/: data_loader.py  preprocess.py  sentiment_analysis.py
src/analytics/: aggregations.py
src/common/: cache.py
src/data/: reviews.csv
src/nlp/: load_spacy.py  preprocess.py
src/utils/: logger.py
src/visualizations/: plots.py  wordcloud.py
