[project]
name = "sentiment-dashboard"
version = "0.1.0"
description = "Streamlit sentiment analysis dashboard"
authors = [
    { name = "quiklii" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "altair",
    "transformers",
    "torch",
    "spacy",
    "pl_core_news_md @ https://github.com/explosion/spacy-models/releases/download/pl_core_news_md-3.8.0/pl_core_news_md-3.8.0-py3-none-any.whl"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
